syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme.protos";
option java_outer_classname = "PingServerProto";

package grpcAPIs;

service PingServer{
  rpc SendPing(PingRequest) returns (PingResponse){}
}

message PingRequest{
  string name = 1;
}
message PingResponse{
  string message = 1;
}